fixed centering again + CPU opponent
- fixed misalignment of elements when resizing window
- fixed misalignment of moves list when hovering over moves
- implemented toggle to play against CPU
- implemented hard but still beatable CPU AI

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 body {
   font: 40px "Trebuchet MS", Helvetica, sans-serif;
-  margin: 20px;
   background: #ffc1a4;
 }
 
@@ -88,13 +87,9 @@ ol, ul {
 }
 
 .game {
-  position: absolute;
-  width: 1200px;
+  width: 1400px;
   height: 800px;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  transform-origin: center center;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -128,10 +123,6 @@ ol, ul {
   color: rgb(255, 250, 220);
 }
 
-.player-x, .player-draw, .player-o {
-  
-}
-
 .move-list {
   margin-top: 30px;
   color: #2e394d;
@@ -155,8 +146,31 @@ ol, ul {
 .move:hover {
   cursor: pointer;
   background: rgb(255, 250, 220);
-  border-radius: 7px;
+  border-width: 6px 6px;
   color: #2e394d;
-  margin-left: 13px;
-  margin-right: 13px;
+  margin-left: 14px;
+  margin-right: 14px;
+}
+
+.game-mode {
+  position: absolute;
+  top: 730px;
+  width: 130px;
+  height: 65px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #ffe1b5;
+  border-radius: 10px;
+}
+
+.game-mode:hover {
+  background: rgb(255, 250, 220);
+}
+
+.mode {
+  margin: auto;
+  display: flex;
+  align-items: center;
 }
